src/objects/Media__c.object
<CustomObject>
    <description>Media has the record and details of various media in the library.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description about the media</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Media</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MId-{000}</displayFormat>
        <label>Media Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>